--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -1,6 +1,13 @@
 #homePage{
-    width: 500vw;
+    width: 100%;
     height: 100%;
     display: flex;
     overflow: hidden;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+}
+
+#homePage > section {
+    flex: none;
+    scroll-snap-align: start;
 }
