--- a/src/Components/HomePage/Sections/Hero/Hero.css
+++ b/src/Components/HomePage/Sections/Hero/Hero.css
@@ -2,48 +2,33 @@
   width: 100vw;
   height: calc(100vh - 3px);
   background-color: #000000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   position: relative;
   overflow: hidden;
 }
 
-#hero > .container {
-  position: absolute;
-  top: 40%;
-  width: 100%;
-}
-
-#canvas{
-  width: 100%;
-  height: 100vh;
+#hero > .container,  #canvas{
   position: absolute;
   top: 0;
-}
-
-#hero > .container .titleContainer {
+  bottom: 0;
   width: 100%;
-  padding: 1rem;
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 3rem;
+  flex-direction: column;
+}
+
+#hero > .container > h1{
+  position: absolute;
+  top: 10%;
+  font-size: clamp(3rem, 10vw, 6rem);
   text-align: center;
 }
 
-#hero > .container .titleContainer > h1{
-  position: absolute;
-  font-size: 6rem;
-}
-
-#hero > .container> .titleContainer > h1:nth-child(1) {
+#hero > .container > h1:nth-child(1) {
   color: #ccc;
 }
 
-#hero > .container> .titleContainer > h1:nth-child(2) {
+#hero > .container > h1:nth-child(2) {
   color: #793ea5;
   animation: textAnimate 4000ms ease-in-out infinite;
 }
@@ -96,67 +81,12 @@
   color: #ccc;
 }
 
-#hero > .heroDescription {
+#hero > .container > .heroDescription {
   width: 100%;
   position: absolute;
-  bottom: 20%;
+  bottom: 15%;
   color: #793ea5;
   text-transform: uppercase;
   text-align: center;
-  font-size: 1.3rem;
-}
-
-@media screen and (max-width: 869px) {
-  #hero > .container {
-    top: 30%;
-  }
-
-  #hero > .container .titleContainer > h1{
-    position: absolute;
-    font-size: 3rem;
-  }
-}
-
-@media screen and (max-width: 750px) {
-  #hero > .heroDescription {
-    bottom: 10%;
-    font-size: 1rem;
-  }
-}
-
-@media screen and (max-width: 420px) {
-
-  #hero > .container .titleContainer > h1{
-    font-size: 2.7rem;
-  }
-}
-
-@media screen and (max-width: 375px) {
-
-  #hero > .container .titleContainer > h1{
-    font-size: 2.2rem;
-  }
-
-  #hero > .heroDescription {
-    font-size: 0.8rem;
-  }
-}
-
-@media screen and (max-width: 300px) {
-
-  #hero > .container .titleContainer > h1{
-    font-size: 2rem;
-  }
-}
-
-@media (orientation:landscape) and (max-width: 700px) {
-
-  #hero > .heroDescription {
-    font-size: 0.6rem;
-    bottom: 10%;
-  }
-
-  #hero > .container .titleContainer {
-    margin-bottom: 1.5rem;
-  }
+  font-size: clamp(1rem, 3vw, 1.5rem);
 }
